# CryptoResearchRAG

./: .env.sample  .gitignore  README.md  chunker.py  data-extractor.py  db.py  docker-compose.yml  embeddings.py  platform_config.py  pyproject.toml  rag_engine.py  schema.sql  search.py
mcp_client/: __init__.py  __main__.py  chat.py  cli.py  client.py
mcp_server/: main.py
mcp_server/tests/: test_server.py
