[project]
name = "cryptoresearchrag"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "lxml>=6.1.0",
    "mcp[cli]>=1.27.1",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.9",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "transformers>=5.7.0",
]
